# DemoProjects

./: README.md
DemoBinaryConvert/: HandleBinaryCC.ipynb  HandleBinaryPy.ipynb
DemoLibTorchNumberCls/: CMakeLists.txt  README.md  getImg.py  jit-model.py  main.cpp  model.jit  model.pth  train.py  utils.py
